# mdatabase

./: CMakeLists.txt  README.md  mabstractmigrationmanager.cpp  mabstractmigrationmanager.h  mdatabase.doxyfile  mdatabase.pri  mdbhelpers.cpp  mdbhelpers.h  mmigration.cpp  mmigration.h  mmigrationmanager.h  mmigrationsdata.h
connectionproviders/: mconnectionproviderbase.cpp  mconnectionproviderbase.h  mconnectionprovidersqlite.cpp  mconnectionprovidersqlite.h  mconnectionprovidersqlitecipher.cpp  mconnectionprovidersqlitecipher.h  mconnectionprovidersqlitesee.cpp  mconnectionprovidersqlitesee.h
example/: CMakeLists.txt  dbmigrationsdata.cpp  main.cpp
sqlitesee/: smain.cpp  sqlitesee.pro  sqlitesee_install.sh
sqlitesee/script-includes/: utils.sh
tst_migrations/: CMakeLists.txt  tst_migrations.cpp
